# exp

./: .gitignore  1.py  plot_styling.py  pyproject.toml
E02-digital-meter/: data_2V.csv
E03-elecbridge/: main.py  result.txt  unc.py  voltage.py
E03-elecbridge/data/: arm_ratio.csv
E04-exact_E_measure/: main.py
E05-fiber_signal/: main.py
E06-magnetic/: transformed_coordinates.xlsx
E07-PN_knot_feature/: plot_data.py  results_report.md  results_report_grayscale.md
E11-hall/: 霍尔效应.xlsx
Exp-AC-bridge/: 1.ipynb
Exp-PN_knot_feature/: main.py  plot_data.py  plot_data_grayscale.py  pyproject.toml  results_report.md  results_report_group_1.md  results_report_group_2.md  results_report_group_3.md  在特定温度下pn结正向电压和正向电流的关系.xlsx
Exp-RLC_transient/: 111.ipynb
Exp-RLC_vib_circuit/: data_200.csv  data_500.csv  data_500_1.csv  main.py  output.txt
Exp-RLC振荡电路/: data_200.csv  data_500.csv  data_500_1.csv  main.py  output.txt  pyproject.toml  utils.py
Exp-VA-test-resistance/: data.ipynb
Exp-digital-meter/: data_200mV.csv  data_20mA.csv  data_2mA.csv  main.py  pyproject.toml
Exp-elecbridge/: main.py  pyproject.toml  voltage.py
Exp-elecbridge/data/: arm_ratio.csv  arm_ratio1.csv  power_voltage.csv  工作簿1.xlsx
Exp-fiber_signal/: pyproject.toml
Exp-magnetic/: data.csv  data1.csv  main.py  pyproject.toml
