[project]
name = "exp-pn-knot-feature"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scienceplots>=2.1.1",
    "scipy>=1.16.2",
]
